--- a/roles/nginx_edit/templates/anisble.iphilka.ru.conf
+++ b/roles/nginx_edit/templates/anisble.iphilka.ru.conf
@@ -1,9 +1,9 @@
 server {
     listen 80;
 
-    server_name ansible.iphilka.ru;
+    server_name ansible.vandopal.ru;
 
-    root /home/ansible-worker/www/stud-template;
+    root /home/vandopal/www/stud-template;
 
     index index.html;
 }
